--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,17 @@ body {
 a {
   color: #00B7FF;
 }
+
+.navbar-brand img {
+    margin-top: -4px;
+    vertical-align: middle;
+}
+
+.available {
+        display: none;
+}
+
+.page {
+        margin-top : 50px;
+}
+
