--- a/public/stylesheets/ui.css
+++ b/public/stylesheets/ui.css
@@ -54,10 +54,7 @@ div#menuPanel {
 /*********************************/
 
 div.coordsLogo {
-    margin: 5% 0 0 0;
     width: 100%;
-
-    height: 30%;
     background: transparent url(../images/logo.png) center center no-repeat;
     background-size: auto 90%;
 }
@@ -66,7 +63,11 @@ div#menuPanel div.coordsLogo {
     height: 20%;
 }
 
-div.loginPageContent div.row {
-    margin: 3em;
-    text-align: center;
+/*********************************/
+/*          MAP PAGE           */
+/*********************************/
+
+#map {
+    height: 70%;
+    width: 100%;
 }
