--- a/public/stylesheets/ui.css
+++ b/public/stylesheets/ui.css
@@ -13,7 +13,7 @@ input,
 select,
 textarea,
 button {
-    font-size: 1em;
+    /*font-size: 1em;*/
     font-family: Lato, sans-serif;
     line-height: 1.3;
 }
