--- a/public/stylesheets/messenger.css
+++ b/public/stylesheets/messenger.css
@@ -1,4 +1,5 @@
 .messenger {
+    box-sizing: content-box;
     border: 1px solid #00c0d0;
 }
 
@@ -12,6 +13,7 @@
     width:100%;
     border-top: 1px solid #dddddd;
     background: #ffffff;
+    height: 100px;
 }
 
 .messenger-message {
@@ -49,23 +51,30 @@
 
 .messenger-message.messenger-message-user-me .messenger-message-content{
     /*border: 1px solid rgba(0,178,89,0.5);*/
-    background: rgba(0,178,89,0.3);
+    /*background: rgba(0,178,89,0.3);*/
     background: rgba(0,178,89,1);
     color: #ffffff;
 }
 
 .messenger-compose-text{
+    height: 100%;
     display: inline-block;
     width: calc( 100% - 75px);
     border: none;
     padding: 10px;
+    box-sizing: border-box;
 }
 
 .messenger-compose-send{
-    border-radius: 0px;
+    color: #fff;
+    margin:0;
+    margin-right: -4px;
+    height: 100%;
+    border: none;
+    box-sizing: border-box;
+    border-radius: 0;
     vertical-align: top;
     display: inline-block;
     background: rgba(0,178,89,1);
     width: 75px;
-    height: 50px;
 }
