--- a/public/stylesheets/messenger.css
+++ b/public/stylesheets/messenger.css
@@ -1,32 +1,96 @@
-.messenger {
-    box-sizing: content-box;
-    border: 1px solid #00c0d0;
+.overflow-y-hidden {
+    overflow-y: hidden !important;
 }
 
+
+.messenger {
+    height: 100%;
+    width:100%;
+}
+
+/* Used for when the height of the messages area resizes */
+.messenger > * {
+    -webkit-transition: height 0.3s;
+    -moz-transition: height 0.3s;
+    transition: height 0.3s;
+}
+
+/* Remember to modify height if room title and compose field change
+ 55 + 55 for now
+*/
 .messenger-messages {
+    height: calc( 100% - 110px );
     width:100%;
     background: #ffffff;
-    padding: 10px;
+    padding: 17px !important;
+}
+
+.messenger-room {
+    text-align: center;
+    height: 55px;
+    width: 100%;
+    color: #ffffff;
+    background: rgba(0,178,89,1);
+    padding: 17px;
+    font-weight: 600;
+    font-size: large;
 }
 
 .messenger-compose {
     width:100%;
     border-top: 1px solid #dddddd;
     background: #ffffff;
-    height: 100px;
+    height: 55px;
+    -webkit-transition: height 0.3s;
+    -moz-transition: height 0.3s;
+    transition: height 0.3s;
 }
 
 .messenger-message {
-    width:100%;
+    width: 100%;
     padding: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    padding-left: 17px;
+    padding-right: 17px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.messenger-message:first-child {
+    padding-top: 17px;
+}
+.messenger-message:last-child {
+    padding-bottom: 17px;
+}
+
+/*The space between adjacent messages are shortened to be concise*/
+/*We need two to separate between us and other users*/
+.messenger-message-user-me + .messenger-message-user-me {
+    margin-top: -10px;
+}
+.messenger-message-user-other + .messenger-message-user-other {
+    margin-top: -10px;
+}
+
+.messenger-message .messenger-message-timestamp{
+    display: none;
+    font-size: 80%;
+    text-transform: uppercase;
+    color: #666666;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    text-align: center;
 }
 
 .messenger-message .messenger-message-content{
+    vertical-align: bottom;
     display: inline-block;
     border-radius: 5px;
     padding: 8px;
+    -webkit-touch-callout: initial;
+    -webkit-user-select: initial;
+    -moz-user-select: initial;
+    -ms-user-select: initial;
+    user-select: initial;
 }
 
 .messenger-message.messenger-message-user-other .messenger-message-user{
@@ -34,14 +98,21 @@
 }
 
 .messenger-message.messenger-message-user-other .messenger-message-user img {
-    width: 35px;
-    height: 35px;
+    width: 34px;
+    height: 34px;
     border-radius: 100px;
-    margin-right: 10px;
+    margin-right: 5px;
+}
+
+.messenger-message.messenger-message-user-other .messenger-message-user {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .messenger-message.messenger-message-user-other .messenger-message-content{
-    /*border: 1px solid #dddddd;*/
     background: #eeeeee;
 }
 
@@ -50,19 +121,19 @@
 }
 
 .messenger-message.messenger-message-user-me .messenger-message-content{
-    /*border: 1px solid rgba(0,178,89,0.5);*/
-    /*background: rgba(0,178,89,0.3);*/
     background: rgba(0,178,89,1);
     color: #ffffff;
 }
 
 .messenger-compose-text{
+    outline: none;
     height: 100%;
     display: inline-block;
     width: calc( 100% - 75px);
     border: none;
-    padding: 10px;
+    padding: 17px;
     box-sizing: border-box;
+    resize: none;
 }
 
 .messenger-compose-send{
