Restructured and refactored svg icons to use just two sprites and clearer sizing mechanisms which work with CSS, fixed GPS icon

--- a/public/stylesheets/fab.css
+++ b/public/stylesheets/fab.css
@@ -22,14 +22,14 @@
     background-color: #d23f31;
 }
 
-.fab.fab-red svg {
+.fab.fab-red svg, .fab.fab-red svg path {
     fill: #FFF;
 }
 
 .fab.fab-blue {
     background-color: #4285f4;
 }
-.fab.fab-blue svg{
+.fab.fab-blue svg, .fab.fab-blue svg path {
     fill: #FFF;
 }
 
@@ -38,7 +38,7 @@
     background-color: #00b259;
 }
 
-.fab.fab-green svg{
+.fab.fab-green svg, .fab.fab-green svg path {
     fill: #FFF;
 }
 
